<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#2c2c2c"
    tools:context=".Accueil">


        <TextView
            android:id="@+id/bienvenue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginVertical="40dp"
            android:text="@string/bienvenue"
            android:textSize="25sp"
            android:layout_marginHorizontal="15dp"/>

        <TextView
            android:id="@+id/messageAccueil"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:layout_constraintTop_toBottomOf="@id/bienvenue"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/messageAccueil"
            android:layout_marginTop="50dp"
            android:justificationMode="inter_word"
            android:textSize="18sp"
            android:layout_marginHorizontal="15dp"/>

        <TextView
            android:id="@+id/explicationsMediatheque"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:layout_constraintTop_toBottomOf="@id/messageAccueil"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/explicationsMediatheque"
            android:layout_marginTop="50dp"
            android:justificationMode="inter_word"
            android:textSize="18sp"
            android:layout_marginHorizontal="15dp"/>

        <TextView
            android:id="@+id/explicationsVolume"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:layout_constraintTop_toBottomOf="@id/explicationsMediatheque"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/explicationsVolume"
            android:layout_marginTop="15dp"
            android:justificationMode="inter_word"
            android:textSize="18sp"
            android:layout_marginHorizontal="15dp"/>

        <TextView
            android:id="@+id/explicationsLecteurSeul"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:layout_constraintTop_toBottomOf="@id/explicationsVolume"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/explicationsLecteurSeul"
            android:layout_marginTop="15dp"
            android:justificationMode="inter_word"
            android:textSize="18sp"
            android:layout_marginHorizontal="15dp"/>

        <TextView
            android:id="@+id/explicationsLecteurDeux"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:layout_constraintTop_toBottomOf="@id/explicationsLecteurSeul"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/explicationsLecteurDeux"
            android:layout_marginTop="15dp"
            android:justificationMode="inter_word"
            android:textSize="18sp"
            android:layout_marginHorizontal="15dp"/>

    <Button
        android:id="@+id/cestParti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/explicationsLecteurDeux"
        android:layout_marginTop="50dp"
        android:text="C'est Parti !"
        android:textSize="20dp"/>

</android.support.constraint.ConstraintLayout>